# Projeto_1_EDA

./: .gitignore  CMakeLists.txt  Plantel.cpp  Plantel.h  README.md  Vetor.cpp  Vetor.h  VetorString.cpp  VetorString.h  adversarios.cpp  adversarios.h  campeonato.cpp  campeonato.h  config.h  constante.h  equipa.cpp  equipa.h  equipas.txt  jogador.cpp  jogador.h  main.cpp  menu.cpp  menu.h  numAleatorio.cpp  numAleatorio.h  plantel.cpp  plantel.h  transferencia.cpp  transferencia.h  utility.cpp  utility.h
docs/: arquitetura.md
